# DojoSDK

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  test_cleanup.py  test_get_df.py  test_parquet_metadata.py  test_preload_concurrent.py
docs/: qdata_openapi.json
dojo/: __init__.py  _compat.py  _exceptions.py  logging.py
dojo/client/: async_client.py  base.py  sync.py
dojo/datasource/: __init__.py  api.py  base.py  config.py  huggingface.py  network.py  registry.py  upload.py
dojo/resources/: analysis.py  base.py  benchmark.py  cache.py  concepts.py  forex.py  macro.py  market_data.py  news.py  sectors.py  stocks.py  strategy.py  user.py
dojo/types/: __init__.py  models.py
dojo/utils/: parquet_utils.py
dojosdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: compare_openapi.py
tests/: test_benchmark_registry.py  test_caching.py  test_client.py  test_hf_fs.py  test_ms_cleanup.py  test_tqdm_concurrent.py
