[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dojosdk"
version = "0.1.2"
description = "Official Python client SDK for the Dojo API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Dojo SDK Authors"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.23.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "anyio>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "build",
]
huggingface = [
    "huggingface_hub>=0.20.0",
    "pyarrow>=12.0.0",
    "datasets",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dojo*"]
